Add pre-flight test cell to Colab notebook and test suite runner

--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -97,6 +97,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 🧪 Run pre-flight tests (2-3 minutes)\n",
+        "print(\"\\n🔎 Running pre-flight data/tokenization tests...\")\n",
+        "import sys\n",
+        "import subprocess\n",
+        "\n",
+        "result = subprocess.run([sys.executable, \"tests/test_data_tokenization.py\"], capture_output=False)\n",
+        "if result.returncode != 0:\n",
+        "    raise SystemExit(\"Pre-flight tests failed. Fix issues above before continuing.\")\n",
+        "print(\"\\n✅ All pre-flight tests passed! Safe to proceed.\")\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
