--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -104,13 +104,33 @@
       "source": [
         "# 🧪 Run pre-flight tests (2-3 minutes)\n",
         "print(\"\\n🔎 Running pre-flight data/tokenization tests...\")\n",
+        "print(\"(This validates critical tokenization and label masking fixes)\\n\")\n",
+        "\n",
         "import sys\n",
         "import subprocess\n",
         "\n",
-        "result = subprocess.run([sys.executable, \"tests/test_data_tokenization.py\"], capture_output=False)\n",
+        "# Run tests and capture output\n",
+        "result = subprocess.run(\n",
+        "    [sys.executable, \"tests/test_data_tokenization.py\"],\n",
+        "    capture_output=True,\n",
+        "    text=True\n",
+        ")\n",
+        "\n",
+        "# Display output\n",
+        "print(result.stdout)\n",
+        "if result.stderr:\n",
+        "    print(\"STDERR:\", result.stderr)\n",
+        "\n",
+        "# Check if tests passed\n",
         "if result.returncode != 0:\n",
+        "    print(\"\\n❌ Tests failed! See error messages above.\")\n",
+        "    print(\"\\nTroubleshooting:\")\n",
+        "    print(\"1. Check that all dependencies are installed\")\n",
+        "    print(\"2. Ensure you're in the project directory\")\n",
+        "    print(\"3. Verify config.py exists and is valid\")\n",
         "    raise SystemExit(\"Pre-flight tests failed. Fix issues above before continuing.\")\n",
-        "print(\"\\n✅ All pre-flight tests passed! Safe to proceed.\")\n"
+        "    \n",
+        "print(\"\\n✅ All pre-flight tests passed! Safe to proceed with GPU training.\")\n"
       ]
     },
     {
