--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -79,8 +79,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Install dependencies\n",
-        "%pip install -q -r requirements.txt\n",
+        "# Install dependencies (Colab-optimized requirements)\n",
+        "print(\"📦 Installing additional packages (this may take 3-5 minutes)...\")\n",
+        "print(\"(Using Colab-optimized requirements to avoid dependency conflicts)\\n\")\n",
+        "\n",
+        "%pip install -q -r requirements-colab.txt\n",
+        "\n",
+        "print(\"\\n✅ Installation complete!\\n\")\n",
         "\n",
         "# Verify installation\n",
         "import torch\n",
@@ -88,12 +93,17 @@
         "import datasets\n",
         "import peft\n",
         "\n",
+        "print(\"📊 Environment Check:\")\n",
         "print(f\"✓ PyTorch: {torch.__version__}\")\n",
         "print(f\"✓ Transformers: {transformers.__version__}\")\n",
         "print(f\"✓ Datasets: {datasets.__version__}\")\n",
         "print(f\"✓ PEFT: {peft.__version__}\")\n",
         "print(f\"✓ CUDA Available: {torch.cuda.is_available()}\")\n",
-        "print(f\"✓ GPU: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else 'None'}\")\n"
+        "if torch.cuda.is_available():\n",
+        "    print(f\"✓ GPU: {torch.cuda.get_device_name(0)}\")\n",
+        "    print(f\"✓ GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB\")\n",
+        "else:\n",
+        "    print(\"⚠️  No GPU detected!\")\n"
       ]
     },
     {
