Add fast installation method to avoid pip dependency resolution hell

--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -79,11 +79,31 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Install dependencies (Colab-optimized requirements)\n",
-        "print(\"📦 Installing additional packages (this may take 3-5 minutes)...\")\n",
-        "print(\"(Using Colab-optimized requirements to avoid dependency conflicts)\\n\")\n",
+        "# Fast installation - installs only missing packages\n",
+        "print(\"📦 Installing missing packages (30 seconds - 2 minutes)...\")\n",
+        "print(\"(Checking what's already installed to save time)\\n\")\n",
         "\n",
-        "%pip install -q -r requirements-colab.txt\n",
+        "# Install only critical missing packages\n",
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "packages_to_check = [\n",
+        "    \"peft>=0.8.0\",\n",
+        "    \"trl>=0.7.0\", \n",
+        "    \"transformer-lens>=1.15.0\",\n",
+        "    \"einops>=0.7.0\",\n",
+        "    \"fairlearn>=0.10.0\",\n",
+        "    \"wandb>=0.16.0\",\n",
+        "]\n",
+        "\n",
+        "for pkg in packages_to_check:\n",
+        "    pkg_name = pkg.split(\">=\")[0].replace(\"-\", \"_\")\n",
+        "    try:\n",
+        "        __import__(pkg_name)\n",
+        "        print(f\"✓ {pkg_name} already installed\")\n",
+        "    except ImportError:\n",
+        "        print(f\"Installing {pkg}...\")\n",
+        "        subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", pkg], check=True)\n",
         "\n",
         "print(\"\\n✅ Installation complete!\\n\")\n",
         "\n",
