Optimize installation: skip heavy packages, install only essentials

--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -79,33 +79,36 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Fast installation - installs only missing packages\n",
-        "print(\"📦 Installing missing packages (30 seconds - 2 minutes)...\")\n",
-        "print(\"(Checking what's already installed to save time)\\n\")\n",
+        "# Super fast installation - only absolute essentials\n",
+        "print(\"📦 Checking required packages...\\n\")\n",
         "\n",
-        "# Install only critical missing packages\n",
         "import subprocess\n",
         "import sys\n",
         "\n",
-        "packages_to_check = [\n",
-        "    \"peft>=0.8.0\",\n",
-        "    \"trl>=0.7.0\", \n",
-        "    \"transformer-lens>=1.15.0\",\n",
-        "    \"einops>=0.7.0\",\n",
-        "    \"fairlearn>=0.10.0\",\n",
-        "    \"wandb>=0.16.0\",\n",
+        "# Core packages needed for fine-tuning (most already in Colab)\n",
+        "essential_packages = [\n",
+        "    (\"peft\", \"0.8.0\"),\n",
+        "    (\"einops\", \"0.7.0\"),\n",
         "]\n",
         "\n",
-        "for pkg in packages_to_check:\n",
-        "    pkg_name = pkg.split(\">=\")[0].replace(\"-\", \"_\")\n",
+        "# Optional packages (we'll skip if they slow things down)\n",
+        "optional_packages = [\n",
+        "    (\"transformer_lens\", \"1.15.0\"),  # For interpretability (can install later if needed)\n",
+        "    (\"fairlearn\", \"0.10.0\"),         # For bias metrics (can install later)\n",
+        "]\n",
+        "\n",
+        "print(\"Essential packages:\")\n",
+        "for pkg_name, version in essential_packages:\n",
         "    try:\n",
         "        __import__(pkg_name)\n",
         "        print(f\"✓ {pkg_name} already installed\")\n",
         "    except ImportError:\n",
-        "        print(f\"Installing {pkg}...\")\n",
-        "        subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", pkg], check=True)\n",
+        "        print(f\"  Installing {pkg_name}...\")\n",
+        "        subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", f\"{pkg_name}>={version}\"], check=True)\n",
+        "        print(f\"  ✓ {pkg_name} installed\")\n",
         "\n",
-        "print(\"\\n✅ Installation complete!\\n\")\n",
+        "print(\"\\n✅ Core packages ready!\\n\")\n",
+        "print(\"Note: Optional packages (transformer-lens, fairlearn) can be installed later if needed.\")\n",
         "\n",
         "# Verify installation\n",
         "import torch\n",
@@ -262,6 +265,30 @@
         "## 🚀 Run Full Experiment\n",
         "\n",
         "**This will take several hours!** Alternatively, run step-by-step in the cells below.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Optional: Install interpretability packages (only if you need circuit analysis)\n",
+        "# Skip this cell if you just want to train models\n",
+        "print(\"⚙️ Optional packages for interpretability:\")\n",
+        "print(\"(You can skip this if just doing basic training)\\n\")\n",
+        "\n",
+        "install_optional = input(\"Install transformer-lens for circuit analysis? (y/n): \").lower().strip() == 'y'\n",
+        "\n",
+        "if install_optional:\n",
+        "    import subprocess\n",
+        "    import sys\n",
+        "    print(\"Installing transformer-lens (this may take 2-3 minutes)...\")\n",
+        "    subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"transformer-lens>=1.15.0\"])\n",
+        "    subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"fairlearn>=0.10.0\"])\n",
+        "    print(\"✅ Optional packages installed!\")\n",
+        "else:\n",
+        "    print(\"Skipping optional packages. You can install later if needed.\")\n"
       ]
     },
     {
