Tests: offline tokenizer fallback and disable perplexity/paraphrasing; Notebook: use quick installer and remove blocking input

--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -79,36 +79,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Super fast installation - only absolute essentials\n",
-        "print(\"📦 Checking required packages...\\n\")\n",
+        "# Ultra-fast installation via quick installer (skips dependency resolution)\n",
+        "print(\"📦 Running quick installer (no-deps for speed)...\\n\")\n",
         "\n",
-        "import subprocess\n",
-        "import sys\n",
-        "\n",
-        "# Core packages needed for fine-tuning (most already in Colab)\n",
-        "essential_packages = [\n",
-        "    (\"peft\", \"0.8.0\"),\n",
-        "    (\"einops\", \"0.7.0\"),\n",
-        "]\n",
-        "\n",
-        "# Optional packages (we'll skip if they slow things down)\n",
-        "optional_packages = [\n",
-        "    (\"transformer_lens\", \"1.15.0\"),  # For interpretability (can install later if needed)\n",
-        "    (\"fairlearn\", \"0.10.0\"),         # For bias metrics (can install later)\n",
-        "]\n",
-        "\n",
-        "print(\"Essential packages:\")\n",
-        "for pkg_name, version in essential_packages:\n",
-        "    try:\n",
-        "        __import__(pkg_name)\n",
-        "        print(f\"✓ {pkg_name} already installed\")\n",
-        "    except ImportError:\n",
-        "        print(f\"  Installing {pkg_name}...\")\n",
-        "        subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", f\"{pkg_name}>={version}\"], check=True)\n",
-        "        print(f\"  ✓ {pkg_name} installed\")\n",
-        "\n",
-        "print(\"\\n✅ Core packages ready!\\n\")\n",
-        "print(\"Note: Optional packages (transformer-lens, fairlearn) can be installed later if needed.\")\n",
+        "import subprocess, sys\n",
+        "subprocess.run([sys.executable, \"quick_install.py\"], check=True)\n",
         "\n",
         "# Verify installation\n",
         "import torch\n",
@@ -116,7 +91,7 @@
         "import datasets\n",
         "import peft\n",
         "\n",
-        "print(\"📊 Environment Check:\")\n",
+        "print(\"\\n📊 Environment Check:\")\n",
         "print(f\"✓ PyTorch: {torch.__version__}\")\n",
         "print(f\"✓ Transformers: {transformers.__version__}\")\n",
         "print(f\"✓ Datasets: {datasets.__version__}\")\n",
@@ -274,13 +249,13 @@
       "outputs": [],
       "source": [
         "# Optional: Install interpretability packages (only if you need circuit analysis)\n",
-        "# Skip this cell if you just want to train models\n",
+        "# Default: skip during Run All to avoid long installs\n",
         "print(\"⚙️ Optional packages for interpretability:\")\n",
-        "print(\"(You can skip this if just doing basic training)\\n\")\n",
+        "print(\"(Skipping by default; set INSTALL_OPTIONAL=True to install)\\n\")\n",
         "\n",
-        "install_optional = input(\"Install transformer-lens for circuit analysis? (y/n): \").lower().strip() == 'y'\n",
+        "INSTALL_OPTIONAL = False  # Set to True to install transformer-lens and fairlearn\n",
         "\n",
-        "if install_optional:\n",
+        "if INSTALL_OPTIONAL:\n",
         "    import subprocess\n",
         "    import sys\n",
         "    print(\"Installing transformer-lens (this may take 2-3 minutes)...\")\n",
